--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,55 @@
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/normalize.css">
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    
+    <div class="first-blok">
+        <div class="content">
+            <div class="part-blok-1">
+                <header class="menu">
+                    <nav>
+                        <ul class="menu__items">
+                            <li><a href="./index.html">HOME</a></li>
+                            <li><a href="#">ABOUT</a></li>
+                            <li><a href="#">WORKS</a></li>
+                            <li><a href="#">PROCESS</a></li>
+                            <li><a href="#">CONTACTS</a></li>
+                        </ul>
+                    </nav>
+                </header>
+                <div class="information">
+                    <div class="container title">
+                        <h1>Design and Layout</h1>
+                    </div>
+                    <div class="container text">
+                        <p>Lorem Ipsum is a placeholder text commonly used in printing and web design. Lorem Ipsum has
+                            been the standard dummy text for Latin scripts since the 16th century.</p>
+                    </div>
+                    <div class="container button">
+                        <button>WRITE TO ME</button>
+                    </div>
+                </div>
+
+                <div class="part-blok-2">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="second-blok">
+        <div class="article">
+            <h1>About Me</h1>
+            <p>
+                Lorem Ipsum is a placeholder text commonly used in printing and web design. Lorem Ipsum has been the
+                standard dummy text for Latin scripts since the 16th century.
+            </p>
+
+        </div>
+    </div>
 </body>
+
 </html>
