--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <header class="menu">
                     <nav>
                         <ul class="menu__items">
-                            <li><a href="./index.html">HOME</a></li>
+                            <li><a href="#">HOME</a></li>
                             <li><a href="#">ABOUT</a></li>
                             <li><a href="#">WORKS</a></li>
                             <li><a href="#">PROCESS</a></li>
@@ -41,20 +41,63 @@
                         <button>WRITE TO ME</button>
                     </div>
                 </div>
-
-                <div class="part-blok-2">
-                </div>
             </div>
         </div>
     </div>
     <div class="second-blok">
         <div class="article">
-            <h1>About Me</h1>
-            <p>
+            <h2 class="article__title">About Me</h2>
+            <p class="article__text">
                 Lorem Ipsum is a placeholder text commonly used in printing and web design. Lorem Ipsum has been the
                 standard dummy text for Latin scripts since the 16th century.
             </p>
 
+        </div>
+    </div>
+    <div class="thirt-blok">
+        <div class = "thirt-blok__elements">
+            <div class="thirt-blok__element">
+                <img src="./images/group.png">
+                <div class = "second-part">
+                    <h3 class = "second-part__title">40+</h3>
+                    <p class = "second-part__text">projects</p>
+                </div>
+            </div>
+            <div class="thirt-blok__element">
+                <img src="./images/group.png">
+                <div class = "second-part">
+                    <h3 class = "second-part__title">40+</h3>
+                    <p class = "second-part__text">projects</p>
+                </div>
+            </div>
+            <div class="thirt-blok__element">
+                <img src="./images/group.png">
+                <div class = "second-part">
+                    <h3 class = "second-part__title">40+</h3>
+                    <p class = "second-part__text">projects</p>
+                </div>
+            </div>
+            <div class="thirt-blok__element">
+                <img src="./images/group.png">
+                <div class = "second-part">
+                    <h3 class = "second-part__title">40+</h3>
+                    <p class = "second-part__text">projects</p>
+                </div>
+            </div>
+            <div class="thirt-blok__element">
+                <img src="./images/group.png">
+                <div class = "second-part">
+                    <h3 class = "second-part__title">40+</h3>
+                    <p class = "second-part__text">projects</p>
+                </div>
+            </div>
+            <div class="thirt-blok__element">
+                <img src="./images/group.png">
+                <div class = "second-part">
+                    <h3 class = "second-part__title">40+</h3>
+                    <p class = "second-part__text">projects</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
