--- a/index.html
+++ b/index.html
@@ -15,91 +15,112 @@
 </head>
 
 <body>
-    <div class="first-blok">
-        <div class="content">
-            <div class="part-blok-1">
-                <header class="menu">
-                    <nav>
-                        <ul class="menu__items">
-                            <li><a href="#">HOME</a></li>
-                            <li><a href="#">ABOUT</a></li>
-                            <li><a href="#">WORKS</a></li>
-                            <li><a href="#">PROCESS</a></li>
-                            <li><a href="#">CONTACTS</a></li>
-                        </ul>
-                    </nav>
-                </header>
-                <div class="information">
-                    <div class="container title">
-                        <h1>Design and Layout</h1>
-                    </div>
-                    <div class="container text">
-                        <p>Lorem Ipsum is a placeholder text commonly used in printing and web design. Lorem Ipsum has
-                            been the standard dummy text for Latin scripts since the 16th century.</p>
-                    </div>
-                    <div class="container button">
-                        <button>WRITE TO ME</button>
-                    </div>
-                </div>
-            </div>
+    <header class="container">
+        <div class="content menu">
+            <nav>
+                <ul class="menu__items">
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="#">WORKS</a></li>
+                    <li><a href="#">PROCESS</a></li>
+                    <li><a href="#">CONTACTS</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <div class="container">
+        <div class="design-layout content">
+            <h1 class="design-layout__title">Design and Layout</h1>
+            <p class="design-layout__text">Lorem Ipsum is a placeholder text commonly used in printing and web design.
+                Lorem Ipsum
+                has
+                been the standard dummy text for Latin scripts since the 16th century.</p>
+            <button class="design-layout__button">WRITE TO ME</button>
         </div>
     </div>
-    <div class="second-blok">
-        <div class="article">
-            <h2 class="article__title">About Me</h2>
-            <p class="article__text">
+
+    <div class="container container__about-me">
+        <div class="content about-me ">
+            <h2 class="about-me__title">About Me</h2>
+            <p class="about-me__text">
                 Lorem Ipsum is a placeholder text commonly used in printing and web design. Lorem Ipsum has been the
                 standard dummy text for Latin scripts since the 16th century.
             </p>
 
         </div>
     </div>
-    <div class="thirt-blok">
-        <div class = "thirt-blok__elements">
-            <div class="thirt-blok__element">
-                <img src="./images/group.png">
-                <div class = "second-part">
-                    <h3 class = "second-part__title">40+</h3>
-                    <p class = "second-part__text">projects</p>
+    <div class="container">
+        <div class="projects content">
+            <div class="projects__elements">
+                <div class="projects__element">
+                    <img src="./images/group.png">
+                    <div class="second-part">
+                        <h3 class="second-part__title">40+</h3>
+                        <p class="second-part__text">projects</p>
+                    </div>
                 </div>
-            </div>
-            <div class="thirt-blok__element">
-                <img src="./images/group.png">
-                <div class = "second-part">
-                    <h3 class = "second-part__title">40+</h3>
-                    <p class = "second-part__text">projects</p>
+                <div class="projects__element">
+                    <img src="./images/group.png">
+                    <div class="second-part">
+                        <h3 class="second-part__title">40+</h3>
+                        <p class="second-part__text">projects</p>
+                    </div>
                 </div>
-            </div>
-            <div class="thirt-blok__element">
-                <img src="./images/group.png">
-                <div class = "second-part">
-                    <h3 class = "second-part__title">40+</h3>
-                    <p class = "second-part__text">projects</p>
+                <div class="projects__element">
+                    <img src="./images/group.png">
+                    <div class="second-part">
+                        <h3 class="second-part__title">40+</h3>
+                        <p class="second-part__text">projects</p>
+                    </div>
                 </div>
-            </div>
-            <div class="thirt-blok__element">
-                <img src="./images/group.png">
-                <div class = "second-part">
-                    <h3 class = "second-part__title">40+</h3>
-                    <p class = "second-part__text">projects</p>
+                <div class="projects__element">
+                    <img src="./images/group.png">
+                    <div class="second-part">
+                        <h3 class="second-part__title">40+</h3>
+                        <p class="second-part__text">projects</p>
+                    </div>
                 </div>
-            </div>
-            <div class="thirt-blok__element">
-                <img src="./images/group.png">
-                <div class = "second-part">
-                    <h3 class = "second-part__title">40+</h3>
-                    <p class = "second-part__text">projects</p>
+                <div class="projects__element">
+                    <img src="./images/group.png">
+                    <div class="second-part">
+                        <h3 class="second-part__title">40+</h3>
+                        <p class="second-part__text">projects</p>
+                    </div>
                 </div>
-            </div>
-            <div class="thirt-blok__element">
-                <img src="./images/group.png">
-                <div class = "second-part">
-                    <h3 class = "second-part__title">40+</h3>
-                    <p class = "second-part__text">projects</p>
+                <div class="projects__element">
+                    <img src="./images/group.png">
+                    <div class="second-part">
+                        <h3 class="second-part__title">40+</h3>
+                        <p class="second-part__text">projects</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    <div class="container">
+        <div class="how-i-work content">
+            <h2 class="how-i-work__title"> How I Work</h2>
+            <p class="how-i-work__text">Lorem Ipsum is a placeholder text commonly used in printing and web
+                design. Lorem Ipsum has been the
+                standard dummy text for Latin scripts since the 16th century.</p>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="picture content">
+            <div class="picture__element">
+                <img src="./images/play-button.png">
+            </div>
+        </div>
+    </div>
+
+    <footer class = "container container__footer">
+        <div class = "footer content">
+            <h3 class = "footer__title">Ostap Ivanenko</h3>
+            <p class = "footer__text">© 2018. All rights reserved.</p>
+        </div>
+
+    </footer>
 </body>
 
 </html>
