--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/normalize.css">
     <link rel="stylesheet" href="./styles/style.css">
+        <link rel="stylesheet" href="./styles/responsive.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
@@ -49,46 +50,46 @@
 
         </div>
     </div>
-    <div class="container">
+    <div class="container container__projects">
         <div class="projects content">
             <div class="projects__elements">
                 <div class="projects__element">
-                    <img src="./images/group.png">
+                    <img class = "projects__image" src="./images/group.png">
                     <div class="second-part">
                         <h3 class="second-part__title">40+</h3>
                         <p class="second-part__text">projects</p>
                     </div>
                 </div>
                 <div class="projects__element">
-                    <img src="./images/group.png">
+                    <img class = "projects__image" src="./images/group.png">
                     <div class="second-part">
                         <h3 class="second-part__title">40+</h3>
                         <p class="second-part__text">projects</p>
                     </div>
                 </div>
                 <div class="projects__element">
-                    <img src="./images/group.png">
+                    <img class = "projects__image" src="./images/group.png">
                     <div class="second-part">
                         <h3 class="second-part__title">40+</h3>
                         <p class="second-part__text">projects</p>
                     </div>
                 </div>
                 <div class="projects__element">
-                    <img src="./images/group.png">
+                    <img class = "projects__image" src="./images/group.png">
                     <div class="second-part">
                         <h3 class="second-part__title">40+</h3>
                         <p class="second-part__text">projects</p>
                     </div>
                 </div>
                 <div class="projects__element">
-                    <img src="./images/group.png">
+                    <img class = "projects__image" src="./images/group.png">
                     <div class="second-part">
                         <h3 class="second-part__title">40+</h3>
                         <p class="second-part__text">projects</p>
                     </div>
                 </div>
                 <div class="projects__element">
-                    <img src="./images/group.png">
+                    <img class = "projects__image" src="./images/group.png">
                     <div class="second-part">
                         <h3 class="second-part__title">40+</h3>
                         <p class="second-part__text">projects</p>
@@ -109,7 +110,7 @@
     <div class="container">
         <div class="picture content">
             <div class="picture__element">
-                <img src="./images/play-button.png">
+                <img class = "picture__image" src="./images/play-button.png">
             </div>
         </div>
     </div>
